# ergokeygen

./: .gitignore  Cargo.toml  IDEA.md  LICENSE  README.md
docs/: CONFIG.md  RESEARCH.md
profiles/: default.ekg  left-ring-strict.ekg
scripts/: bench.sh
src/: charset.rs  cli.rs  config.rs  input.rs  layout.rs  lib.rs  main.rs  weights.rs
src/cli/: usage.rs
src/fast/: generate.rs  key.rs  mod.rs  scoring.rs  state.rs
src/generate/: dedupe.rs  mod.rs  options.rs  reference.rs
src/model/: key_cost.rs  mod.rs  patterns.rs  timing.rs  util.rs
src/scoring/: cost.rs  mod.rs  state.rs  types.rs
tests/: cli.rs  contract.rs  model.rs
